--- a/Makefile.options
+++ b/Makefile.options
@@ -2,5 +2,5 @@
 # For list of options and documentation see Makefile.config
 
 ifneq ($(LIBMAT_CONSOLE),)
-override CFLAGS += -DCONFIG_CONSOLE=1
+override CFLAGS += -DCONFIG_MATCONSOLE=1
 endif
